--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
-{
+{ 
+  "homepage": "http://kumawatramgopal.github.io/who-are-the-dev",
   "name": "who-are-the-dev",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./",
+  "homepages": "./",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -13,6 +14,8 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -32,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
