React Project: Bitcoin

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 { 
-  "homepage": "http://kumawatramgopal.github.io/who-are-the-dev",
-  "name": "who-are-the-dev",
+  "homepage": "http://kumawatramgopal.github.io/react-project",
+  "name": "react-project",
   "version": "0.1.0",
   "private": true,
   "homepages": "./",
